fix: fix horizontal scroll on 320px width

--- a/tic-tac-toe/style.css
+++ b/tic-tac-toe/style.css
@@ -353,11 +353,13 @@ h1,
 
 .robot,
 .human {
-  width: 200px;
-  height: 200px;
+  max-width: 200px;
+  width: 40vw;
+  height: 40vw;
+  max-height: 200px;
   background-repeat: no-repeat;
   background-position: center;
-  background-size: auto 170px;
+  background-size: auto;
   cursor: pointer;
   transition: 0.6s;
 }
@@ -470,6 +472,14 @@ h1,
   .enemy.show,
   .records.show {
     top: 60px;
+  }
+
+  .records-table {
+    font-size: 18px;
+  }
+
+  .records {
+    padding: 10px 3px;
   }
 }
 
